[package]
name = "duck_husky_wedding"
version = "0.1.0"
authors = ["Andres <andresnrx@gmail.com>"]
build = "build.rs"

[[bin]]
name = "duck_husky_wedding"
path = "src/main.rs"

[dependencies]
error-chain = ">=0.9"
glm = ">=0.2.2"
moho = ">=0.0.5"
serde = ">=0.9"
serde_yaml = ">=0.6"
serde_derive = ">=0.9"